--- a/src/main/ch1_serviceapi.tex
+++ b/src/main/ch1_serviceapi.tex
@@ -24,19 +24,22 @@ If a service accepts input arguments or outputs data, two additional parameters 
 When a client sends a message in the form
 \begin{lstlisting}
 {
-  run: string // the service name
+  run: string, // the service name.
+  callID: integer // a unique random number identifying the session
 }
 \end{lstlisting}
-to Luci, Luci simply forwards this message to the service. The service returns with a message containing in its run id:
+to Luci, Luci simply forwards this message to the service. The service \textbf{MAY} returns with a message containing in its run id:
 \begin{lstlisting}
 {
-  newCallID: integer // the newly generated callID
+  newCallID: number, // the newly generated callID
+  callID: integer // the same callID, it has priority over newCallID
 }
 \end{lstlisting}
 If a client requests to stop the execution of a certain service call, he sends the following message which is subsequently forwarded to and handled by the service.
 \begin{lstlisting}
 {
-  cancel: integer // the callID
+  cancel: number, // the callID
+  callID: integer // the same callID, it has priority over newCallID
 }
 \end{lstlisting}
 
@@ -53,21 +56,22 @@ Without any notification of Luci, the service is responsible of keeping Luci upd
 }
 \end{lstlisting}
 
-From time to time, the service might want to keep Luci updated of it's progress. The client is only notified of progress if the percentage equals 0 meaning that a service started.
+From time to time, the service might want to keep Luci updated of it's progress. If the progress equals 0, the service has been ordered to start.
 \begin{lstlisting}
 {
-  progress: json, // some progress message
+  progress: integer,
   callID: integer,
   serviceName: string,
   taskID: integer,
-  percentage: integer
+  intermediateResult: json // some result, it is optional.
 }
 \end{lstlisting}
 
 Finally, if an error occured, the service will provide an error message to Luci:
 \begin{lstlisting}
 {
-  error: string
+  error: string,
+  callID: integer
 }
 \end{lstlisting}
 
