Removed taskID, serviceName fields from qua-compliant example outputs

--- a/src/main/ch4_quacompliance.tex
+++ b/src/main/ch4_quacompliance.tex
@@ -163,9 +163,7 @@ Example outputs given in Listings \ref{lst:quacompliantresult:scenario}, \ref{ls
     value : 15.0
   },
   callID : 213,
-  duration : 10.2,
-  taskID : 1,
-  serviceName : "RandomQUA"
+  duration : 10.2
 }
 \end{lstlisting}
 
@@ -177,8 +175,6 @@ Example outputs given in Listings \ref{lst:quacompliantresult:scenario}, \ref{ls
   },
   callID : 213,
   duration : 10.2,
-  taskID : 1,
-  serviceName : "RandomQUA",
   values : {
     name : "values",
     format : "float32 array",
@@ -199,8 +195,6 @@ Example outputs given in Listings \ref{lst:quacompliantresult:scenario}, \ref{ls
   },
   callID : 213,
   duration : 10.2,
-  taskID : 1,
-  serviceName : "RandomQUA",
   values : {
     name : "values",
     format : "float32 array",
@@ -221,8 +215,6 @@ Example outputs given in Listings \ref{lst:quacompliantresult:scenario}, \ref{ls
   },
   callID : 213,
   duration : 3.0,
-  taskID : 1,
-  serviceName : "RandomQUA",
   scenario_id : 1337,
   timestamp_accessed : 1472137755,
   timestamp_modified : 1472137758
